# package-manager

./: .gitignore  Cargo.toml  README.md  build.rs  installer.nsi  meson.build  org.caioxcezar.packagemanager.json
.github/workflows/: action-linux.yml  action.yml
data/: meson.build  org.caioxcezar.packagemanager.appdata.xml.in  org.caioxcezar.packagemanager.desktop.in  org.caioxcezar.packagemanager.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
resources/: grid_check.ui  grid_text.ui  package_manager.gresource.xml  styles.css  window.ui
src/: application.rs  config.rs  constants.rs  main.rs  meson.build  messagebox.rs  package_manager.gresource.xml  window.rs  window.ui
src/application/: imp.rs  mod.rs
src/backend/: api.rs  command.rs  mod.rs  package.rs  provider.rs  providers.rs  settings.rs  utils.rs
src/backend/package_object/: imp.rs  mod.rs
src/backend/providers_impl/: dnf.rs  flatpak.rs  mod.rs  pacman.rs  paru.rs  protonge.rs  winget.rs
src/grid_check/: imp.rs  mod.rs
src/grid_text/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
