[package]
name = "package-manager"
version = "1.3.2"
edition = "2021"

[dependencies]
secstr = "0.5.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
rayon = "1.7.0"
regex = "1.7.3"

[dependencies.adw]
package = "libadwaita"
version  = "0.4.1"

[dependencies.gtk]
package = "gtk4"
version = "0.6.6"
features = ["v4_8"]

[build-dependencies]
glib-build-tools = "0.17.0"
gtk = { version = "0.6.2", package = "gtk4" }
