[package]
name = "package-manager"
version = "1.6.3"
edition = "2021"

[dependencies]
adw = { version = "0.7.1", package = "libadwaita", features = ["v1_6"] }
gtk = { version = "0.9.5", package = "gtk4", features = ["v4_10"] }
secstr = "0.5.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
tar = "0.4"
rayon = "1.7.0"
regex = "1.7.3"
strum = "0.26.3"
strum_macros = "0.26.4"
async-channel = "2.3.1"
features = "0.10.0"
anyhow = "1.0.95"

[build-dependencies]
glib-build-tools = "0.20.0"
gtk = { version = "0.9.5", package = "gtk4" }
